change tabs to images

--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
         <div class="sidebar-pane" id="home">
           <div id="rootwizardtop" class="tabbable tabs-left">
             <ul>
-              <li><a href="#gender_tab" data-toggle="tab">Gender</a></li>
-              <li><a href="#subscriber_status_tab" data-toggle="tab">Subscriber Status</a></li>
-              <li><a href="#age_tab" data-toggle="tab">Age</a></li>
+              <li><a href="#gender_tab" data-toggle="tab">
+                 <img src="images/gender.png" alt="Gender" /></a></li>
+              <li><a href="#subscriber_status_tab" data-toggle="tab">
+                 <img src="images/bike.png" alt="Subscriber Status" /></a></li>
+              <li><a href="#age_tab" data-toggle="tab">
+                 <img src="images/age.png" alt="Age" /></a></li>
             </ul>
             <div class="tab-content">
               <div class="tab-pane" id="gender_tab">
@@ -77,11 +80,17 @@
           </div>
           <div id="rootwizardbottom" class="tabbable tabs-left">
             <ul>
-              <li><a href="#day_of_week_tab" data-toggle="tab">Bikes Out By Day</a></li>
-              <li><a href="#hour_of_day_tab" data-toggle="tab">Bikes Out By Hour</a></li>
-              <li><a href="#distance_by_bike_tab" data-toggle="tab">Distance Travelled by Bike</a></li>
-              <li><a href="#times_travelled_tab" data-toggle="tab">Times Travelled</a></li>
-              <li><a href="#day_of_year" data-toggle="tab">Bikes Out by Day of Year</a></li>
+              <li><a href="#day_of_week_tab" data-toggle="tab">
+                <img src="images/bikes_by_day.png" alt="Bikes Out By Day" /></a></li>
+
+              <li><a href="#hour_of_day_tab" data-toggle="tab">
+                <img src="images/bikes_by_hour.png" alt="Bikes Out By Hour" /></a></li>
+              <li><a href="#distance_by_bike_tab" data-toggle="tab">
+                <img src="images/bikes_by_distance.png" alt="Distance Travelled by Bike" /></a></li>
+              <li><a href="#times_travelled_tab" data-toggle="tab">
+                <img src="images/times_traveled.png" alt="Times Travelled" /></a></li>
+              <li><a href="#day_of_year" data-toggle="tab">
+                <img src="images/calendar.png" alt="Bikes Out by Day of Year"/></a></li>
             </ul>
             <div class="tab-content">
               <div class="tab-pane" id="day_of_week_tab">
