error message for no data found

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
               resetPlayback(); 
             });
           </script>
+          <div id="playbackError"></div>
           <ul id="day">
             <i id="sunrise" class="fa fa-sun-o"> 6:15am</i>
             <i id="sunset" class="fa fa-moon-o"> 7:41pm</i>
