Headers above each tabbed section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <!-- Tab panes -->
       <div class="sidebar-content">
         <div class="sidebar-pane" id="home">
+          <h2 class="sidebar-header">Divvy Demographics</h2>
           <div id="rootwizardtop" class="tabbable tabs-left">
             <ul>
               <li><a href="#gender_tab" data-toggle="tab">
@@ -84,6 +85,8 @@
               </div>
             </div>	
           </div>
+
+          <h2 class="sidebar-header">Divvy Statistics</h2>
           <div id="rootwizardbottom" class="tabbable tabs-left">
             <ul>
               <li><a href="#day_of_week_tab" data-toggle="tab">
