--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 <div id="type" style="display: inline"></div>
               </div>
               <div class="tab-pane" id="age_tab">
-                <div id="age" style="display: inline"></div>
+                <div id="age" style="display: inline"></div> 
+                <div id="age-selected" class="inline selected_graph"></div>
               </div>
             </div>	
           </div>
