changes for gender selection

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <div class="tab-content">
               <div class="tab-pane" id="gender_tab">
                 <div id="gender" style="display: inline"></div>
+                <div id="gender-selected" class="inline selected_graph"></div>
               </div>
               <div class="tab-pane" id="subscriber_status_tab">
                 <div id="type" style="display: inline"></div>
