frontend for usertype

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
               </div>
               <div class="tab-pane" id="subscriber_status_tab">
                 <div id="type" style="display: inline"></div>
+                <div id="type-selected" class="inline selected_graph"></div>
               </div>
               <div class="tab-pane" id="age_tab">
                 <div id="age" style="display: inline"></div> 
