playback now updates weather for added days

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <div id="weather">
-      <img id='wicon' src='http://icons.wxug.com/i/c/i/partlycloudy.gif'/>
+      <img id='wicon' src='images/spinner.gif'/>
       <p id="temp" class='inline'>
       </p><span id="date"></span></p></div>
     <div id="map">
