--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
   </head>
   <body>
+    <div id="reset" onclick="resetMap()"><i class="fa fa-refresh"></i></div>
     <div id="weather">
       <img id='wicon' src='images/spinner.gif'/>
       <p id="temp" class='inline'>
