updates to index and last of static date data

--- a/index.html
+++ b/index.html
@@ -208,7 +208,13 @@
           - Built front and backend for daily playback<br />
           - Updated UI, Icons, and layout<br />
           - Made markers dynamically removable<br />
-          - added chicago neighborhood and border overlays
+          - added chicago neighborhood and border overlays<br />
+          - Built popularity key
+          <h3>Week 4</h3>
+          - Built data backends for filtering all graphs by age, gender, usertype, day<br />
+          - Built Dane's UI designs into working javascript<br />
+          - integrated weather undergraound data<br />
+          - Added controls and layers for imablances
           <h2><a href="mailto:bspahr314@gmail.com">Bryan Spahr</a></h2>
           <h3>Week 1</h3>
           - Began data analysis<br />
@@ -234,7 +240,7 @@
         </div>
         <div class="sidebar-pane" id="messages">
           <h1>Playback A Day's Rides</h1>
-          <input type="text" id="datepicker" value="Aug 24 2013">
+          <input type="text" id="datepicker" value="2013-06-26">
           <button id="playbutton">Play</button>
           <button id="resetbutton">Reset</button>
           <div style="display: inline" id="playLoading"></div>
