various font and text changes

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </ul>
             <div class="tab-content">
               <div class="tab-pane" id="day_of_week_tab">
-                <div id="chartDayOfWeek" class="inline">
+                <div id="chartDayOfWeek" class="inline bryan">
                   <p class="chartLabel"> 
                     <h3>Number of Bikes out by Day of the Week</h3>
                   </p>
@@ -150,7 +150,7 @@
                 </div>
               </div>
               <div class="tab-pane" id="hour_of_day_tab">
-                <div id="chartHourOfDay" class="inline">
+                <div id="chartHourOfDay" class="inline bryan">
                   <p class="chartLabel"> 
                     <h3>Number of Bikes out by Hour of the Day</h3>
                   </p>
@@ -160,14 +160,14 @@
                 </div>
               </div>
               <div class="tab-pane" id="distance_by_bike_tab">
-                <div id="chartDistancesOverall">
+                <div id="chartDistancesOverall" class="bryan">
                  <p class="chartLabel">  
                     <h3>Distribution of Distances Biked</h3>
                   </p>
                 </div>
               </div>
               <div class="tab-pane" id="times_travelled_tab">
-                <div id="chartTimesOverall" class="inline">
+                <div id="chartTimesOverall" class="inline bryan">
                   <p class="chartLabel"> 
                     <h3>Distribution of Times Travelled</h3>
                   </p>
