--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     <script src="js/inflow.js"></script>
     <script src="js/outflow.js"></script>
     <script src="js/flow.js"></script>
-    <script src="js/label.js"></script>
     <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
   </head>
   <body>
@@ -75,6 +74,106 @@
 	</div>
     </div>
     <div id="colorrange"><img src="images/scale.png" /></div>
+    <div id="bike-distance" style="visibility: hidden; display: none;"> 
+    
+<script>
+
+var margin = {top: 20, right: 20, bottom: 30, left: 40},
+    width = 3000 - margin.left - margin.right,
+
+    height = 500 - margin.top - margin.bottom;
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
+var y = d3.scale.linear()
+    .rangeRound([height, 0]);
+
+var color = d3.scale.ordinal()
+    .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00","#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00","#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .tickFormat(d3.format(".2s"));
+
+var svg = d3.select("#bike-distance").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.csv("distribution-by-bike.csv", function(error, data) {
+  color.domain(d3.keys(data[0]).filter(function(key) { return key !== "ID"; }));
+
+  data.forEach(function(d) {
+    var y0 = 0;
+    d.ages = color.domain().map(function(name) { return {name: name, y0: y0, y1: y0 += +d[name]}; });
+    d.total = d.ages[d.ages.length - 1].y1;
+  });
+
+  data.sort(function(a, b) { return b.total - a.total; });
+
+  x.domain(data.map(function(d) { return d.ID; }));
+  y.domain([0, d3.max(data, function(d) { return d.total; })]);
+
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end")
+      .text("Frequency");
+
+  var state = svg.selectAll(".state")
+      .data(data)
+    .enter().append("g")
+      .attr("class", "g")
+      .attr("transform", function(d) { return "translate(" + x(d.ID) + ",0)"; });
+
+  state.selectAll("rect")
+      .data(function(d) { return d.ages; })
+    .enter().append("rect")
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.y1); })
+      .attr("height", function(d) { return y(d.y0) - y(d.y1); })
+      .style("fill", function(d) { return color(d.name); });
+
+  var legend = svg.selectAll(".legend")
+      .data(color.domain().slice().reverse())
+    .enter().append("g")
+      .attr("class", "legend")
+      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+
+  legend.append("rect")
+      .attr("x", width - 18)
+      .attr("width", 18)
+      .attr("height", 18)
+      .style("fill", color);
+
+  legend.append("text")
+      .attr("x", width - 24)
+      .attr("y", 9)
+      .attr("dy", ".35em")
+      .style("text-anchor", "end")
+      .text(function(d) { return d; });
+
+});
+
+</script>
+<div id="bike-distance-close" onclick="d3.select('#bike-distance').style('display', 'none')">Click to Hide</div>
+    </div>
     <div id="map">
     </div>
 
@@ -178,6 +277,26 @@
                   <p class="chartLabel"> 
                     <h3>Distribution of Distance Travelled by Individual Bikes</h3>
                   </p>
+                  <script>
+                    function loadBikeDistance() {
+                      d3.select("#sidebar-right")
+                        .attr('class', 'sidebar collapsed');
+                      d3.select("#bike-distance")
+                        .style('display', 'inline')
+                        .style('visibility', 'visible')
+                        .select('svg')
+                        .style('position','absolute')
+                        .style('width', '3000')
+                        .style('top', '100px')
+                        .style('left', '15px')
+                        .style('margin-left', 'auto')
+                        .style('margin-right', 'auto')
+                        .style('z-index', '3000')  
+                   }
+                  </script>
+
+                  <img onclick="loadBikeDistance()" src="images/bike_distance.png" class="screenshot"/>
+                  <center>Click for full size</center>
                 </div>
               </div>
               <div class="tab-pane" id="day_of_year">
